--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,19 +20,19 @@
 		<div class="jumbotron">
 			<h1 class=""><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder</h1>
 			<hr>
-			<h2 class="">Answer a few basic questions. </h2>
-			<h2 class="">Then find the friend with the greatest compatibility!</h2>
+			<h2 class="">Answer a few personality questions. </h2>
+			<h2 class="">Then see who you are compatibile with!</h2>
 			<br>
 
 			<div class="">
-				<a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>	
+				<a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Find Friend</h4></button></a>	
 			</div>
 
 		</div>
 
 	    <footer class="footer">
 	      <div class="container">
-		        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+		        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/ornibella/Friend-Finder">GitHub Repo</a></p>
 	      </div>
 	    </footer>
 
